[tool.poetry]
name = "flask-todo-api"
version = "0.1.0"
description = ""
authors = ["madhusudhan"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
flask-smorest = "^0.44.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
